--- a/wiki/usage.wiki
+++ b/wiki/usage.wiki
@@ -1,7 +1,6 @@
-#summary One-sentence summary of this page.
 #labels Phase-Requirements,Featured,Phase-Design
-
 = Introduction =
+c:\>xor
 XOR-encrypt stdin. Dmitry Unltd. ⌐2006
 
 USAGE:
