--- a/wiki/usage.wiki
+++ b/wiki/usage.wiki
@@ -9,7 +9,7 @@ USAGE:
       xor 'password' or [base16encode|base16decode]
       -if password is one of these: base16encode|base16decode the program encodes/decodes instead of xor
       -Data to be encrypted/decrypted/encoded/decoded is read from stdin and written to stdout
-      -Diagnostic messages are written to stderr, redirect 2>/dev/null (Unix) or 2>NUL (Windows) if you don't want it
+      -Diagnostic messages are written to stderr, redirect 2>/dev/null (Unix) or 2>NUL (Windows) if you don't want them
       -Binary files no problem. Key also could be binary, but then can't pass it as an arg
 
 EXAMPLES:
@@ -19,7 +19,7 @@ EXAMPLES:
       xor password <test.encrypted> test.decrypted
   check(should be no diff):
       diff test.original test.decrypted
-  ineractive use-type or paste your text,terminate by 'Enter' and ^Z:
+  interactive use-type or paste your text,terminate by 'Enter' and ^Z:
       xor password > test.encrypted
   encrypt|base16encode|base16decode|decrypt->get original text:
       echo foo|xor pwd|xor base16encode|xor base16decode|xor pwd
@@ -40,4 +40,3 @@ INFO:
       phrase.
 }}}
       
-
